TradeScrubber, TradeScrubberTest fix: fixed the parsing mechanism, enforced UTF-8 reader to avoid errors, and updated tests for Checkstyle compliance.
TradeHistory refactor: updated format to match build requirements, which now pass.

TradeHistoryTest refactor: updated format to match build requirements, which now pass.